# system-viewer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.bat  build.rs  dev.bat  garbage.js  index.html  index.js  io.js  package.json  todo.md  webpack.config.js
gui_backend/: Cargo.toml  README.md
gui_backend/src/: backend.rs  lib.rs  webgl.rs  webgl1.rs  webgl2.rs
gui_backend/src/shader/: fragment_300es.glsl  vertex_300es.glsl
public/: scene_list.ron
public/body_data/heliocentric/: earth_moon_sun.csv  earth_moon_sun.gen.csv  planets_main_moons.csv  planets_moons.gen.csv  pluto.csv  sun_earth_moon.csv
public/database/: artificial.json  asteroids.json  comets.json  jovian_satellites.json  major_bodies.json  osc_elements.json  other_satellites.json  saturnian_satellites.json
public/ephemerides/: 3@sun.txt
public/gltf/: two_cubes.glb
public/scenes/: _auto_load_manifest.txt  all_major_planets_and_moons.ron  asteroid_stress_test.ron  earth_centric.ron  earth_moon.ron  full_solar_system.ron  gltf_test.ron  jovian_system.ron  light_test.ron  light_test_planetarium.ron  planet_line_up.ron  planets_and_satellites.ron  planets_inner_moons.ron  teal_light_around_ico_sphere.ron  test.ron
public/schemas/: body.ron
schemas/: body.ron  osc_element.ron  scene.ron  state_vector.ron
scripts/: add_body_colors.py  add_material_info.py  constants.py  database_utils.py  download_horizons_files.py  estimate_asteroid_parameters.py  generate_state_vectors.py  main.py  parse_horizons_ephemeris.py  parse_horizons_statevectors.py  parse_jpl_satellite_physical_params.py  parse_small_body_db_results.py
scripts/horizons_ephemeris_heliocentric/planets_and_moons/: 1@sun.txt  2@sun.txt  301@3.txt  399@3.txt  401@4.txt  402@4.txt  499@4.txt  4@sun.txt  501@5.txt  502@5.txt  503@5.txt  504@5.txt  505@5.txt  506@5.txt  507@5.txt  508@5.txt  509@5.txt  510@5.txt  511@5.txt  512@5.txt  513@5.txt  514@5.txt  515@5.txt  516@5.txt  517@5.txt  518@5.txt  519@5.txt  520@5.txt  521@5.txt  522@5.txt  523@5.txt  524@5.txt  525@5.txt  526@5.txt  527@5.txt  528@5.txt  529@5.txt  530@5.txt  531@5.txt  532@5.txt  (+154 more)
src/: app_state.rs  app_update_context.rs  asset_manifest.rs  common_funcs.rs  components.rs  constants.rs  engine.rs  engine_interface.rs  entity.rs  events.rs  gl_setup.rs  lib.rs  mesh.rs  object.rs  resources.rs  systems.rs  traits.rs  world.rs
src/components/: component.rs  kinematic.rs  kinematic_component.rs  light.rs  light_component.rs  mesh.rs  mesh_component.rs  metadata.rs  metadata_component.rs  mod.rs  orbital.rs  physics.rs  rigidbody.rs  rigidbody_component.rs  transform.rs  transform_component.rs  ui.rs
src/managers/: component.rs  ec.rs  entity.rs  event.rs  input.rs  input_manager.rs  interface.rs  mod.rs  resource.rs  scene.rs  system.rs  system_manager.rs
src/managers/interface/: details_ui.rs  interface_manager.rs  mod.rs
src/managers/orbit/: body_description.rs  mod.rs  orbit.rs  orbit_manager.rs  orbital_elements.rs  state_vector.rs
src/managers/resource/: body_description.rs  bounding_box.rs  collider.rs  gltf.rs  gltf_resource.rs  gltf_resources.rs  intermediate_mesh.rs  material.rs  mesh.rs  mesh_generation.rs  mod.rs  procedural_meshes.rs  resource_manager.rs  texture.rs
src/managers/resource/materials/: gltf_metal_rough.rs  material.rs  mod.rs  phong.rs  texture_test.rs  unlit.rs
src/managers/resource/shaders/: basecolor.frag  brdf.glsl  color.frag  constants.glsl  functions.glsl  gltf_metal_rough.frag  mod.rs  normals.frag  phong.frag  relay_all.vert  relay_color.vert  relay_locals.vert  relay_points.vert  screenspace.frag  screenspace.vert  skybox.frag  tangents.frag  uv0.frag  uv1.frag  white.frag  world_normal.frag  world_normals.frag  world_tangents.frag
src/managers/resource/shaders/fragment/: albedo.glsl  basecolor.glsl  color.glsl  default.rs  gltf_metal_rough.glsl  local_normal.glsl  local_normal.rs  mod.rs  phong.glsl  uv0.glsl  uv1.glsl
src/managers/resource/shaders/vertex/: default.rs  mod.rs  relay_all.glsl  relay_all.rs  relay_color.glsl
src/managers/scene/: description.rs  gltf.rs  mod.rs  orbits.rs  scene.rs  scene_manager.rs  serialization.rs  storage_WIP.rs
src/managers/scene/component_storage/: hash_storage.rs  mod.rs  packed_storage.rs  sparse_storage.rs
src/materials/: material.rs  mod.rs  simple.rs
src/shaders/vertex/: mod.rs
src/systems/: interface.rs  mod.rs  mouse_interaction.rs  orbital.rs  physics.rs  rendering.rs  transform_update.rs  transform_update_system.rs
src/systems/rendering/: framebuffer.rs  mesh.rs  mod.rs  rendering.rs  rendering_system.rs  texture.rs
src/systems/rendering/materials/: material.rs
src/utils/: camera.rs  egui.rs  gl.rs  hashmap.rs  log.rs  memory.rs  mod.rs  orbital_elements.rs  orbits.rs  raycasting.rs  string.rs  transform.rs  units.rs  vec.rs  web.rs
www/: index.html
