[package]
name = "system_viewer"
version = "0.1.0"
authors = ["Daniel Coelho"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "=0.1.5"
console_log = "0.2"
futures = "0.3"
egui = "0.5.0"
gltf = "0.15.2"
gui_backend = { path = "gui_backend" }
image = "0.23.12"
instant = { version = "0.1", features = [ "wasm-bindgen", "now" ] }
js-sys = "0.3.19"
lazy_static = "1.3.0"
log = "0.4"
nalgebra = "0.23.2"
regex = "1.4.2"
wasm-bindgen = "0.2.44"
wasm-bindgen-futures = "0.4"
winit = { version = "0.22", features = ["web-sys"] }

[dependencies.web-sys]
version = "0.3.44"
features = [
  'Blob',
  'console',
  'CssStyleDeclaration',
  'Document',
  'DomRect',
  'Element',
  'File',
  'FileList',
  'FileReader',
  'FileReaderSync',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlInputElement',
  'KeyboardEvent',
  'Location',
  'MouseEvent',
  'Performance',
  'Storage',
  'Touch',
  'TouchEvent',
  'TouchList',
  'WebGl2RenderingContext',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WheelEvent',
  'Window',
]

[build-dependencies]
wasm-pack = "0.9.1"

[profile.release]
opt-level = "s"

[profile.dev.package."*"]
opt-level = 3