[package]
name = "system_viewer"
version = "0.1.0"
authors = ["Daniel Coelho"]
edition = "2018"
license = "MIT"
repository = "https://github.com/1danielcoelho/system-viewer"
description = "Small 3D engine written in Rust and targetting WASM for viewing solar system N-body simulations"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { version = "0.8" }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "=0.1.5"
console_log = "0.2"
chrono = "0.4"
glow = "0.11.2"
egui = { version = "0.18.1", features = ["persistence"] }
egui_glow = "0.18.1"
futures = "0.3"
gltf = { version = "0.15.2", features = ["extras", "names"]}
image = { version = "0.23.12", default-features = false, features = ["jpeg"] }
instant = { version = "0.1", features = [ "wasm-bindgen", "now" ] }
js-sys = "0.3.19"
lazy_static = "1.3.0"
log = "0.4"
nalgebra = { version = "0.23.2", features = ["serde-serialize"]}
regex = "1.4.2"
ron = "0.6.4"
serde = { version = "1.0", features = ["serde_derive", "rc"] }
serde_json = "1.0"
wasm-bindgen = "0.2.44"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3.0"

[dependencies.web-sys]
version = "0.3.57"
features = [
  'Blob',
  'console',
  'CssStyleDeclaration',
  'Document',
  'DomRect',
  'Element',
  'File',
  'FileList',
  'FileReader',
  'FileReaderSync',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlInputElement',
  'KeyboardEvent',
  'Location',
  'MouseEvent',
  'Performance',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Storage',
  'Touch',
  'TouchEvent',
  'TouchList',
  'WebGl2RenderingContext',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlRenderbuffer',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WheelEvent',
  'Window',
]

[build-dependencies]
wasm-pack = "0.9.1"

[profile.release]
opt-level = "s"
lto = true

[profile.dev]
opt-level = 0

# The GLTF crate especially is dramatically slower with lower opt-levels
[profile.dev.package."*"]
opt-level = 3