[package]
name = "gui_backend"
version = "0.2.0"
authors = ["Daniel Coelho"]
description = "Backend for rendering egui paint jobs to wasm-bindgen. Based on egui_web, available here: https://github.com/emilk/egui"
license = "MIT"
edition = "2018"
readme = "README.md"
include = [ "**/*.rs", "Cargo.toml"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = { version = "0.5.0", features = ["serde"] }
js-sys = "0.3"
parking_lot = "0.11"
serde = "1"
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  'Clipboard',
  'ClipboardEvent',
  'console',
  'CssStyleDeclaration',
  'DataTransfer',
  'Document',
  'DomRect',
  'Element',
  'Headers',
  'HtmlCanvasElement',
  'HtmlElement',
  'KeyboardEvent',
  'Location',
  'MouseEvent',
  'Navigator',
  'Performance',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Storage',
  'Touch',
  'TouchEvent',
  'TouchList',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WheelEvent',
  'Window',
]
