[package]
version = "0.9.0"
license = "MIT OR Apache-2.0"
name = "gui_backend"
authors = ["Daniel Coelho", "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Backend for rendering egui paint jobs to wasm-bindgen. Based on egui_web, available here: https://github.com/emilk/egui"
edition = "2018"
readme = "README.md"
include = [ "**/*.rs", "Cargo.toml"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = { version = "0.9.0" } 
epi = { version = "0.9.0" }
epaint = { version = "0.9.0" }
js-sys = "0.3"
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[features]
default = []
http = [
  "epi/http",
  "web-sys/Headers",
  "web-sys/Request",
  "web-sys/RequestInit",
  "web-sys/RequestMode",
  "web-sys/Response",
]
persistence = ["serde", "serde_json"]

[dependencies.web-sys]
version = "0.3"
features = [
  "Clipboard",
  "ClipboardEvent",
  "console",
  "CssStyleDeclaration",
  "DataTransfer",
  "Document",
  "DomRect",
  "Element",
  "HtmlCanvasElement",
  "HtmlElement",
  "KeyboardEvent",
  "Location",
  "MouseEvent",
  "Navigator",
  "Performance",
  "Storage",
  "Touch",
  "TouchEvent",
  "TouchList",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WheelEvent",
  "Window",
]
